[gd_scene load_steps=23 format=3 uid="uid://cfbbn2j7kce0x"]

[ext_resource type="Script" path="res://scenes/game_object/treasure_chest_enemy/treasure_chest_enemy.gd" id="1_0idd6"]
[ext_resource type="PackedScene" uid="uid://1eb4c2a8e7v0" path="res://scenes/component/health_component.tscn" id="2_0tdfl"]
[ext_resource type="PackedScene" uid="uid://cp8vnkqe3a3id" path="res://scenes/component/death_component.tscn" id="3_lryh3"]
[ext_resource type="PackedScene" uid="uid://n1auteb125hu" path="res://scenes/component/vial_drop_component.tscn" id="5_lfw7x"]
[ext_resource type="PackedScene" uid="uid://2c8e6xjhaegf" path="res://scenes/component/chest_velocity_component.tscn" id="6_8r7da"]
[ext_resource type="PackedScene" uid="uid://cwj5a1t2d4jlq" path="res://scenes/component/hit_flash_component.tscn" id="6_picjc"]
[ext_resource type="Shader" path="res://scenes/component/hit_flash_component.gdshader" id="6_yo6ln"]
[ext_resource type="Texture2D" uid="uid://ujh42gnlwnc3" path="res://scenes/game_object/treasure_chest_enemy/tile_0089.png" id="7_ixnbo"]
[ext_resource type="PackedScene" uid="uid://cbq5u5mv12hvn" path="res://scenes/component/hurtbox_component.tscn" id="7_q4vgh"]
[ext_resource type="Script" path="res://scenes/game_object/treasure_chest_enemy/Sprite2D.gd" id="8_nqov0"]
[ext_resource type="Texture2D" uid="uid://c3pyt2kb7rrbd" path="res://scenes/game_object/treasure_chest_enemy/chest_particle.png" id="9_56imr"]

[sub_resource type="Animation" id="Animation_o5kvq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ofal8"]
resource_name = "inhale"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.05, 0, 0.1, 1.55),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PickupArea2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.35, 1.55),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_ihjh3"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1.93187, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1), Vector2(0, -8), Vector2(0, 1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 0.9), Vector2(0.7, 1.4), Vector2(1.1, 0.9)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"change_sprite_0"
}, {
"args": [],
"method": &"change_sprite_1"
}, {
"args": [],
"method": &"change_sprite_2"
}, {
"args": [],
"method": &"change_sprite_3"
}, {
"args": [],
"method": &"change_sprite_3"
}, {
"args": [],
"method": &"change_sprite_3"
}, {
"args": [],
"method": &"change_sprite_2"
}, {
"args": [],
"method": &"change_sprite_1"
}, {
"args": [],
"method": &"change_sprite_0"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jts7g"]
_data = {
"RESET": SubResource("Animation_o5kvq"),
"inhale": SubResource("Animation_ofal8"),
"walk": SubResource("Animation_ihjh3")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a03a2"]
resource_local_to_scene = true
shader = ExtResource("6_yo6ln")
shader_parameter/lerp_percent = 0.0

[sub_resource type="Curve" id="Curve_jcqut"]
_data = [Vector2(0.00621118, 0.0153941), 0.0, 2.57759, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ihf6n"]
curve = SubResource("Curve_jcqut")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uhbwv"]
particle_flag_disable_z = true
direction = Vector3(0, -10, 0)
spread = 60.0
initial_velocity_min = 100.0
initial_velocity_max = 200.0
angular_velocity_min = 250.0
angular_velocity_max = 400.0
gravity = Vector3(0, -250, 0)
linear_accel_min = 100.0
linear_accel_max = 200.0
scale_curve = SubResource("CurveTexture_ihf6n")

[sub_resource type="CircleShape2D" id="CircleShape2D_gby1h"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jvvl8"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_a8x8b"]
radius = 30.0

[node name="TreasureChestEnemy" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(166, 73)
collision_layer = 8
collision_mask = 9
script = ExtResource("1_0idd6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jts7g")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_0tdfl")]
max_health = 50.0

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("3_lryh3")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("helath_component") instance=ExtResource("5_lfw7x")]
helath_component = NodePath("../HealthComponent")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("6_picjc")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_a03a2")

[node name="ChestVelocityComponent" parent="." instance=ExtResource("6_8r7da")]
max_speed = 100
acceleration = 70.0

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
texture_filter = 1
scale = Vector2(0.683683, -0.683683)
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_uhbwv")
texture = ExtResource("9_56imr")
lifetime = 0.7
one_shot = true
randomness = 0.09
fixed_fps = 0

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
modulate = Color(1, 1, 1, 0.988235)
texture = ExtResource("7_ixnbo")
offset = Vector2(0, -8)
script = ExtResource("8_nqov0")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("7_q4vgh")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -6)
scale = Vector2(0.767578, 0.767578)
shape = SubResource("CircleShape2D_gby1h")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
light_mask = 0
visibility_layer = 0
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_jvvl8")

[node name="PickupArea2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, 25)
scale = Vector2(1.28562, 1.28562)
shape = SubResource("CircleShape2D_a8x8b")
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
